add validatin in task update

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -13,7 +13,7 @@
             <!-- Navbar With Search  Start -->
             <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-with-search">
                 <a href="#" class="sidebar-toggler flex-shrink-0">
-                    <i class="fa fa-bars"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </a>
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown">
@@ -67,7 +67,7 @@
             <!-- Navbar Without earch Start -->
             <nav class="navbar navbar-expand bg-light navbar-light sticky-top px-4 py-0" th:fragment="navigation-without-search">
                 <a href="#" class="sidebar-toggler flex-shrink-0">
-                    <i class="fa fa-bars"></i>
+                    <i class="fa-solid fa-bars"></i>
                 </a>
                 <div class="navbar-nav align-items-center ms-auto">
                     <div class="nav-item dropdown" id="notification-light-container">
