project service impl testing

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2569,7 +2569,7 @@
                             <select id="month-filter" class="form-control" action="filter">
                                 <option value="January">January</option>
                                 <option value="February">February</option>
-                                <option value="Match">Match</option>
+                                <option value="March">March</option>
                                 <option value="April">April</option>
                                 <option value="May">May</option>
                                 <option value="June">June</option>
