fixed error in issue not updating when new issue comming

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1251,7 +1251,8 @@
 
                     if (
                         loginUser.currentUser.role !== "SDQC" &&
-                        loginUser.currentUser.role !== "PMO"
+                        loginUser.currentUser.role !== "PMO" &&
+                        loginUser.currentUser.role !== "DEPARTMENT_HEAD"
                     ) {
                         document.querySelector(
                             "#navigate-task"
