fixed error in task detail with employee

--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -42,7 +42,7 @@
 
         <div class="container-fluid mt-2">
             <p style="display:none;" th:text="${projectId}" id="projectId"></p>
-            <nav class="py-3 px-2">
+            <nav class="py-1 px-2">
                 <ol class="breadcrumb mb-0">
                     <li class="breadcrumb-item"><a href="/project/all">Project List</a></li>
                     <li class="breadcrumb-item active">
@@ -149,7 +149,7 @@
                 </script>
             </nav>
             <!-- nav for task and gantt chart end -->
-            <div class="tab-content " style="height: 600px" id="myTabContent">
+            <div class="tab-content pb-5" id="myTabContent">
 
                 <div class="tab-pane fade position-relative" id="project-detials-view" role="tabpanel" aria-labelledby="project-detail-tab">
 
