--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="UTF-8" />
         <title>Internal Project Management</title>
@@ -2638,17 +2638,7 @@
                     data-toggle-extra="tab-content"
                 >
                     <div class="rounded-2 px-4">
-                        <div
-                            class="row col-rols-6 border-bottom border border-dark fs-5 fw-bold bg-primary text-white"
-                        >
-                            <div class="col p-0 text-center">Status</div>
-                            <div class="col p-0 text-center">Title</div>
-                            <div class="col p-0 text-center">Start</div>
-                            <div class="col p-0 text-center">End</div>
-                            <div class="col p-0 text-center">Name</div>
-                            <div class="col p-0 text-center">Role</div>
-                        </div>
-                        <div class="text-end mt-2">
+                        <div class="text-end mt-2 mb-2" sec:authorize="hasAnyRole('SDQC','PMO')">
                             <div class="btn-group" role="group">
                                 <select class="form-control btn btn-primary" name="dropdown" id="exportPdfSelect" style="width: 30%;">
                                     <option value="" selected disabled>Export PDF</option>
@@ -2665,13 +2655,21 @@
                             </div>
                         </div>
                         <div
+                            class="row col-rols-6 border-bottom border border-dark mt-2 fs-5 fw-bold bg-primary text-white"
+                        >
+                            <div class="col p-0 text-center">Status</div>
+                            <div class="col p-0 text-center">Title</div>
+                            <div class="col p-0 text-center">Start</div>
+                            <div class="col p-0 text-center">End</div>
+                            <div class="col p-0 text-center">Name</div>
+                            <div class="col p-0 text-center">Role</div>
+                        </div>
+
+                        <div
                             class="d-flex pt-2 flex-column gap-2"
                             style="background-color: #e5e5f7"
-                            id="sort-container"
-                        >
-                            <!-- TODO :: SHOW ALL PROJECTS LIST START FROM HERE -->
+                            id="sort-container">
                             <div class="loader"></div>
-                            <!-- TODO :: SHOW ALL PROJECTS LIST END HERE -->
                         </div>
                         <div style="width: 100%; height:50vh" class="d-flex justify-content-center align-items-center d-none" id="no-result">
                             <div class="d-flex justify-content-center align-items-center flex-column">
